2009-05-09  Abel Cheung  <abelcheung@gmail.com>

	* scorerender*.php:
	- Update copyright and version.

=== ScoreRender 0.3.0 ===
2009-04-30  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php, showcode.css:
	- Completely revamped to utilize Zero Clipboard by jhuckaby.
	  No more "mozilla not supported" thing.
	- Move to misc/ subfolder.

	* blank.gif, iepngfix.php:
	- Move to misc/ subfolder.

	* misc/ZeroClipbard.js, misc/ZeroClipboard.swf:
	- New files.

	* wp-scorerender.php:
	- No need to use DIRECTORY_SEPARATOR.
	- Adopt new path for IE png fix and showcode.php.

	* notation/pmw.php:
	- Fix to reflect the fact that PostScripts generated by PMW don't
	  have transparency info.

2009-04-08  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- Cosmetic word changes.

2009-04-05  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, scorerender-admin.php:
	- Drop IE warning option, add IE translucency option instead.

2009-03-26  Abel Cheung  <abelcheung@gmail.com>

	* iepngfix.php, blank.gif:
	- Incorporate IE PNG Alpha Fix v2.0alpha3 from
	  http://www.twinhelix.com/css/iepngfix/
	* wp-scorerender.php (scorerender_add_ie6_style):
	- Add relevant CSS style for IE <= 6.

2009-03-25  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php, scorerender-admin.php:
	- If web host disabled certain PHP process execution functions, just
	  display warning message instead of running into fatal error.

2009-01-18  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- (_exec) Replace batch file creation hack with "cmd /c : &" hack,
	  which is not as fragile as batch file creation and deletion.
	* notation/mup.php:
	- (conversion_step1) Adjust temp license file creation routine, since
	  batch file is no more used.

2008-10-05  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-utils.php:
	- (wp_parse_str) Taken from WordPress for backword compat with WP 2.2

	* wp-scorerender.php, scorerender-admin.php: